--- a/contacts-service/pom.xml
+++ b/contacts-service/pom.xml
@@ -24,6 +24,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
+
+
 
     </dependencies>
 </project>
