--- a/contacts-service/src/main/resources/hibernate/hibernate.properties
+++ b/contacts-service/src/main/resources/hibernate/hibernate.properties
@@ -1,7 +1,7 @@
 jdbc.driverClassName = org.h2.Driver
 jdbc.url = jdbc:h2:~/h2/accelerator/contacts_db
 jdbc.username = sa
-jdbc.password = ""
+jdbc.password =
 hibernate.dialect = org.hibernate.dialect.H2Dialect
-hibernate.hbm2ddl.auto = create-drop
+hibernate.hbm2ddl.auto = create
 hibernate.show_sql = true
