--- a/contacts-service/pom.xml
+++ b/contacts-service/pom.xml
@@ -29,6 +29,10 @@
             <artifactId>h2</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
 
 
     </dependencies>
