liquibase configuration files added

--- a/contacts-service/src/main/resources/hibernate/hibernate.properties
+++ b/contacts-service/src/main/resources/hibernate/hibernate.properties
@@ -3,5 +3,5 @@ jdbc.url = jdbc:h2:~/h2/accelerator/contacts_db
 jdbc.username = sa
 jdbc.password =
 hibernate.dialect = org.hibernate.dialect.H2Dialect
-hibernate.hbm2ddl.auto = create
+hibernate.hbm2ddl.auto = validate
 hibernate.show_sql = true
