--- a/contacts-service/src/main/resources/hibernate/hibernate.properties
+++ b/contacts-service/src/main/resources/hibernate/hibernate.properties
@@ -5,3 +5,4 @@ jdbc.password =
 hibernate.dialect = org.hibernate.dialect.H2Dialect
 hibernate.hbm2ddl.auto = validate
 hibernate.show_sql = true
+hibernate.use_sql_comments = true
